widget_derive/tests/ui/declare/if_guard_fail.stderr
error: if guard is not supported in `id`
  --> tests/ui/declare/if_guard_fail.rs:25:10
   |
25 |       id if true => : test,
   |          ^^^^^^^

error: Depends on a widget field which behind `if guard`, its existence depends on the `if guard` result in runtime.
  --> tests/ui/declare/if_guard_fail.rs:43:17
   |
43 |         margin: a.margin
   |                 ^^^^^^^^
   |
warning: field define here.
  --> tests/ui/declare/if_guard_fail.rs:37:11
   |
37 |       id: a,
   |           ^
38 |       size: Size::zero(),
39 |       margin if true =>:  EdgeInsets::all(0.),
   |       ^^^^^^ ^^^^^^^
